# poetry-demonstration

./: README.md  pyproject.toml
doNotInclude/src/: hello.c
projectA/packageA/: main.py
projectA/packageA/submoduleA/: lib.py
