[tool.poetry]
name = "multi-package-test"
version = "0.1.1"
description = ""
authors = ["Samuel Schmidt <tdimhcsleumas@gmail.com>"]
readme = "README.md"
packages = [
    {include = "packageA", from = "projectA"},
    {include = "packageB", from = "projectA"},
    {include = "packageC", from = "projectB/src"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pyspark = "3.4.1"
black = "22.12.0"
flake8 = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
